# silent-chat

./: CMakeLists.txt  README.md
src/: connection.cpp  connection.hpp  handler.cpp  handler.hpp  main.cpp  message.cpp  message.hpp  p2p_client.hpp  resources.h  session.cpp  session.hpp
src/gui/: chat.cpp  imgui_resources.hpp
